<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.
    </string>
    <string name="phone">Phone</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="hint_repassword">Confirm Password</string>
    <string name="button_take_photo">Take Photo</string>
    <string name="button_galley">Choose from Gallery</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_profile_image">Select Image</string>
    <string name="dialog_permission">Permission</string>
    <string name="dialog_permission_storage">You need to provide storage permission</string>
    <string name="btn_scan">Scan Number</string>
    <string name="btn_pay">Charge Fine</string>
    <string name="btn_read_info">Read User Info</string>
    <string name="btn_add_licence">Add Licence</string>
    <string name="btn_view_stat">View status</string>
    btn_view_stat
    <string name="fathername">S/D/W of</string>
    <string name="dob">Date of birth</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="drivingLicenceNo">Licence No</string>
    <string name="dateofissue">DOI</string>
    <string name="validtill">Valid till</string>
    <string name="dld">DLD</string>
    <string name="issueauth">Issue Authority</string>
    <string name="action_vehicle_type">Add Vehicle Type</string>
    <string name="action_save">Save</string>
    <string name="licenceType">Licence Type</string>
    <string name="issueDate">DOI</string>
    <string name="action_close">Delete</string>
    <string name="action_add_vehicle">Add Vehicle</string>
    <string name="btn_add_vehicle">Add Vehicle</string>
    <string name="vehicleNo">Vehicle NO</string>
    <string name="regNo">Registration No</string>
    <string name="regDate">Registration Date</string>
    <string name="model">Model</string>
    <string name="vhielceClass">Class</string>
    <string name="chasisNo">Chasis</string>
    <string name="engineNo">Engine No</string>
    <string name="fuelType">Fuel Type</string>
    <string name="rcExpiry">Rc expiry</string>
    <string name="hint_vehicle_licence">Licence No</string>
    <string name="btn_proceed">Proceed</string>
    <string name="hint_search">Search</string>
    <string name="btn_no_licence">No License number found</string>
    <string name="action_upload">Upload Docs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
