<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">


        <TextView
                android:id="@+id/type"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/licenceType"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>




        <TextView
                android:layout_weight="1"
                android:id="@+id/issueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issueDate"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>


    <Button
            android:id="@+id/save"
            style="?android:textAppearanceSmall"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_close"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
</LinearLayout>