<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Authority.LicenceDetail">
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/licenceNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/drivingLicenceNo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/doi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateofissue"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/drivingexpiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validtill"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/dld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dld"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/issueauth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issueauth"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/recylerType"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>