<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Customer.AddVehicle">
    <android.support.v4.widget.NestedScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">
            <LinearLayout
                    android:visibility="gone"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageButton
                        android:background="@android:color/transparent"
                        android:id="@+id/img_sign"
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:src="@android:drawable/gallery_thumb"/>
                <ImageButton
                        android:background="@android:color/transparent"
                        android:id="@+id/img_profile"
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:src="@android:drawable/gallery_thumb"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/vehicleNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicleNo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/regNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/regNo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/regDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/regDate"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/classv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vhielceClass"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/chasis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/chasisNo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/engineNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/engineNo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/fuelType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fuelType"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/rcexpiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rcExpiry"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:visibility="gone"
                    android:id="@+id/addType"
                    style="?android:textAppearanceSmall"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/action_vehicle_type"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>


            <android.support.v7.widget.RecyclerView
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:id="@+id/recylerType"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
            </android.support.v7.widget.RecyclerView>
            <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/input_item"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/licenceType"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/issueDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/issueDate"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"/>

                </android.support.design.widget.TextInputLayout>
                <Button
                        android:id="@+id/save_item"
                        style="?android:textAppearanceSmall"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/action_save"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
            android:id="@+id/save"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
</LinearLayout>
